--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@ body {
   font-family: 'Open Sans';
 }
 
+.card {
+  border: 1px solid black;
+  height: auto;
+  margin: 10px;
+  width: 300px;
+}
+
+.card-img {
+  width: 300px;
+}
+
+.animal-container {
+  display: flex;
+  flex-wrap: wrap;
+}
