--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,20 @@
   box-sizing: border-box;
 }
 
+.App-header {
+  background-image: url('https://www.freewebheaders.com/wp-content/gallery/wildlife/elephants-in-the-distance-sunset-landscape-website-header.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 300px;
+}
+
 body {
   margin: 0;
   font-family: 'Open Sans';
+}
+
+main {
+  display: flex;
 }
 
 .card {
@@ -22,6 +33,7 @@ body {
 .animal-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .donation-card {
@@ -30,29 +42,39 @@ body {
   margin: 10px;
 }
 
+.donations-container {
+  justify-content: center;
+  width: 100%;
+}
+
 form {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 15px;
 }
 
 h2 {
-  margin: 20px;
+  color: white;
+  font-size: 48px;
+  margin: 0 20px;
 }
 
 input {
   border: 1px solid grey;
   border-radius: 3px;
-  margin: 10px;
-  padding: 10px;
+  font-size: 14px;
+  margin: 15px;
+  padding: 12px;
   width: 20%;
 }
 
 button {
   background-color: #0599ff;
+  border: none;
   border-radius: 10px;
   color: white;
-  margin: 10px;
+  font-size: 14px;
+  margin: 15px;
   padding: 10px;
   width: 20%;
 }
