--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,16 @@ main {
   height: 200px;
 }
 
+.card-detail {
+  padding: 15px;
+  text-align: center;
+}
+
+.name {
+  font-size: 20px;
+  font-weight: 700;
+}
+
 .animal-container {
   display: flex;
   flex-wrap: wrap;
@@ -40,11 +50,20 @@ main {
   border: 1px solid grey;
   box-shadow: 2px 2px grey;
   margin: 10px;
+  padding: 10px;
+  width: 300px;
 }
 
 .donations-container {
   justify-content: center;
-  width: 100%;
+}
+
+aside {
+  align-items: center;
+  border-right: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 form {
@@ -77,4 +96,11 @@ button {
   margin: 15px;
   padding: 10px;
   width: 20%;
+}
+
+.recent-donations {
+  color: black;
+  font-size: 30px;
+  font-weight: 300;
+  text-decoration: underline;
 }
